--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -1,4 +1,4 @@
-name: Auto Deploy PHP
+name: CI/CD PHP Apache (Local VM)
 
 on:
   push:
@@ -7,16 +7,23 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    name: Deploy ke Apache Local
+    runs-on: self-hosted
 
     steps:
-    - name: Deploy to server
-      uses: appleboy/ssh-action@v1.0.0
-      with:
-        host: ${{ secrets.SSH_HOST }}
-        username: ${{ secrets.SSH_USER }}
-        key: ${{ secrets.SSH_KEY }}
-        script: |
-          cd /var/www/html
-          git fetch origin
-          git reset --hard origin/main
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Set Permission Project
+        run: |
+          sudo chown -R www-data:www-data /var/www/html/myproject
+          sudo chmod -R 755 /var/www/html/myproject
+
+      - name: Deploy Code
+        run: |
+          cd /var/www/html/myproject
+          git pull origin main
+
+      - name: Reload Apache
+        run: |
+          sudo systemctl reload apache2
