--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -1,30 +1,38 @@
-name: Deploy PHP App to Azure VM
+name: CI/CD Pipeline to Azure
 
+# Trigger: Berjalan otomatis setiap ada push ke branch 'main'
 on:
   push:
-    branches: [ "main" ]
+    branches: [ main ]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      # 1. Ambil kode terbaru dari repo
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
-      - name: Deploy via SCP
-        uses: appleboy/scp-action@v0.1.7
+      # 2. Setup koneksi SSH dan jalankan perintah di Ubuntu Azure
+      - name: Deploy to Server via SSH
+        uses: appleboy/ssh-action@v1.0.3
         with:
-          host: ${{ secrets.AZURE_VM_IP }}
-          username: ${{ secrets.AZURE_VM_USER }}
-          key: ${{ secrets.AZURE_VM_SSH_KEY }}
-          source: "./*"
-          target: "/var/www/html"
-
-      - name: Restart Apache
-        uses: appleboy/ssh-action@v0.1.7
-        with:
-          host: ${{ secrets.AZURE_VM_IP }}
-          username: ${{ secrets.AZURE_VM_USER }}
-          key: ${{ secrets.AZURE_VM_SSH_KEY }}
+          host: ${{ secrets.SERVER_IP }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: 22
           script: |
-            sudo systemctl restart apache2
+            # Masuk ke folder aplikasi
+            cd /var/www/nama-aplikasi-anda 
+            
+            # Tarik kode terbaru dari GitHub
+            git pull origin main
+            
+            # (Opsional) Jika menggunakan Node.js, jalankan ini:
+            # npm install
+            # pm2 restart all
+            
+            # (Opsional) Jika menggunakan PHP/Laravel:
+            # composer install
+            # php artisan migrate
